# ephys

./: .gitignore  CLAUDE.md  Claude_edits_spike_analysis_2026.07613.txt  LICENSE.txt  README.md  README.rst  SECURITY.md  make_local.sh  pyproject.toml  pytest.ini  requirements.txt  requirements_local.txt  requirements_old.txt  setup.py  spike_steady_state_halfwidths.csv  test.py  test_keras.py
.github/workflows/: codeql-analysis.yml
archives/: pre-uv-requirements.txt  requirements_old.txt  setup.py
doc/: pipeline.rst
doc/source/: conf.py  datatables.rst  index.rst  modules.rst  pipeline.rst
doc/source/api/: ephys.ephysanalysis.DataPlan.DataPlan.rst  ephys.ephysanalysis.DatacReader.GetClamps.rst  ephys.ephysanalysis.DatacReader.ReadDatac.rst  ephys.ephysanalysis.DatacReader.example_dir_scan.rst  ephys.ephysanalysis.DatacReader.listAllFiles.rst  ephys.ephysanalysis.DatacReader.plotonefile.rst  ephys.ephysanalysis.DatacReader.printNotes.rst  ephys.ephysanalysis.EPSC_analyzer.PSCAnalyzer.rst  ephys.ephysanalysis.EPSC_analyzer.make_key.rst  ephys.ephysanalysis.Fitting.Fitting.rst  ephys.ephysanalysis.IVSummary.IVSummary.rst  ephys.ephysanalysis.MakeClamps.MakeClamps.rst  ephys.ephysanalysis.MatdatacRead.Block.rst  ephys.ephysanalysis.MatdatacRead.DatacFile.rst  ephys.ephysanalysis.MatdatacRead.GetClamps.rst  ephys.ephysanalysis.MatdatacRead.HFile.rst  ephys.ephysanalysis.MatdatacRead.Note.rst  ephys.ephysanalysis.MatdatacRead.flatten.rst  ephys.ephysanalysis.MatdatacRead.get_blocks.rst  ephys.ephysanalysis.MatdatacRead.get_blocks_type.rst  ephys.ephysanalysis.MatdatacRead.get_note.rst  ephys.ephysanalysis.MatdatacRead.main.rst  ephys.ephysanalysis.MatdatacRead.ndinds.rst  ephys.ephysanalysis.MatdatacRead.plot_block.rst  ephys.ephysanalysis.MatdatacRead.plot_blocks.rst  ephys.ephysanalysis.PSCAnalyzer.PSCAnalyzer.rst  ephys.ephysanalysis.PSCAnalyzer.PSC_Fitter.rst  ephys.ephysanalysis.PSCAnalyzer.make_key.rst  ephys.ephysanalysis.ReadDataTable.BuildGui.rst  ephys.ephysanalysis.ReadDataTable.ReadDataTable.rst  ephys.ephysanalysis.ReadDataTable.test.rst  ephys.ephysanalysis.RmTauAnalysis.RmTauAnalysis.rst  ephys.ephysanalysis.SpikeAnalysis.SpikeAnalysis.rst  ephys.ephysanalysis.Utility.ScriptError.rst  ephys.ephysanalysis.Utility.Utility.rst  ephys.ephysanalysis.VCSummary.VCSummary.rst  ephys.ephysanalysis.acq4read.Acq4Read.rst  ephys.ephysanalysis.acq4read.one_test.rst  ephys.ephysanalysis.boundrect.BoundRect.rst  ephys.ephysanalysis.boundrect.edge.rst  (+265 more)
ephys/: __init__.py  setup.py  test.py
ephys/config/: MosaicEditor.cfg  fix_objective_data.cfg  standard_configurations.cfg
ephys/datareaders/: DatacReader.py  __init__.py  abf_reader.py  acq4_reader.py  acq4read.py  datac_reader.py  matdatac_reader.py
ephys/ephys_analysis/: IVSummary.py  IV_Analysis.py  IV_Analysis_params.py  IV_summarize.py  MAP_Analysis.py  MakeClamps.py  ReadDataTable.py  RmTauAnalysis.py  SpikeAnalysis.py  VCSummary.py  VCTraceplot.py  __init__.py  adaptation_indices.py  analysis_common.py  analysis_parameters.py  burst_analysis.py  c_deriv.pyx  iv_analysis.py  iv_plotter.py  map_analysis.py  poisson_score.py  read_data_table.py  rm_tau_analysis.py  spike_analysis.py  spike_analysis_fast.py  summarize_ivs.py  vc_analysis.py  vc_summary.py  vc_traceplot.py
ephys/ephys_analysis/tests/: conftest.py  hh_sim.py  test_fi_fitting.py  test_fifitting.py  test_spike_analysis_fast.py  test_spikes.py  test_vc_analysis.py
ephys/ephysanalysis/: DataPlan.py  DatacReader.py  EPSC_analyzer.py  IVSummary.py  MakeClamps.py  MatdatacRead.py  PSCAnalyzer.py  PSCAnalyzer_+old.py  ReadDataTable.py  RmTauAnalysis.py  SpikeAnalysis.py  Utility.py  VCSummary.py  VCTraceplot.py  __init__.py  acq4read.py  bridge.py  c_deriv.pyx  cursor_plot.py  dataSummary.py  dir_check.py  ma2tiff.py  plot_maps.py  poisson_score.py  show_data.py
ephys/ephysanalysis/metaarray/: MetaArray.py
ephys/explorers/: som_pbm_vcn.py
ephys/gui/: __init__.py  command_params.py  data_summary_table.py  data_table_functions.py  data_table_manager.py  data_tables.py  data_tables_main.py  table_tools.py
ephys/mapanalysistools/: __init__.py  analyzeMapData.py  analyze_map_data.py  cc_map_analysis.py  compute_scores.py  define_markers.py  getTable.py  get_markers.py  get_table.py  map_event_scoring.py  mapevent_analysis2.py  markers.py  plotMapData.py  plot_map_data.py  plot_maps.py  shuffler.py  test_ec.py
ephys/mapanalysistools/archived/: functions.py
ephys/mini_analyses/: 3.0  __init__.py  clembek.pyx  clements_bekkers.py  compare_tests.ipynb  functions.py  make_table.py  mini_analysis.py  mini_event_dataclass_reader.py  mini_event_dataclass_reader_V1.py  mini_event_dataclasses.py  mini_event_dataclasses_V1.py  mini_summary.py  mini_summary_plots.py  minis_methods.py  minis_methods_common.py  minis_minid_dataclass.py
ephys/mini_analyses/tests/: test_minis.py  test_notchfilter.py
ephys/mini_analyses/util/: __init__.py  user_tester.py
ephys/plotters/: __init__ .py  default_ylims.py  plot_spike_info.py  plot_traces.py  psi_functions.py
ephys/psc_analysis/: PSCAnalyzer.py  PSCFiitter.py  __init__.py  analyze_IO.py  analyze_PPF.py  analyze_Train.py  analyze_VDEP.py  analyze_train.py  analyze_voltage_dependence.py  functions.py  psc_analyzer.py  psc_fiitter.py
ephys/tools/: AN_Probs.py  CBA_maps.py  DataPlan.py  Fitting.py  Nernst_GHK.py  Utility.py  __init__.py  acq4_to_NWB.py  all_intrinsic_stats_1-way.r  analyze_ivs.py  annotated_cursor.py  annotated_cursor_pg.py  arcs.py  assemble_datasets.py  bridge.py  bridge_tool.py  build_info_string.py  c_deriv.c  c_deriv.pyx  categorize_ages.py  check_analysis_files.py  check_df_for_cells_trap.py  check_included_protocols.py  check_inclusions_exclusions.py  check_rs.py  clean_database_merge.py  cochlea_mapping.py  cochlear_frequency_maps.py  colorize_tif.ipynb  combine.py  combine_new.py  compare_past_analyses.py  configfile.py  configuration_manager.py  cursor_plot.py  dataSummary.py  data_plan.py  data_summary.py  data_summary_celltype_updater.py  db_tools.py  (+77 more)
icons/: tray_icon2.psd
(+43 files in other folders)
