[build-system]
requires = ["setuptools", "setuptools-scm", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "ephys"
version = "0.8.3.01"
description = "Methods for analysis of elecrophysiology data: IV and FI curves, minis, EPSCs, LSPS maps"
authors = [
    {name = "Paul Manis", email = "pmanis@med.unc.edu"},
    {name = "Paul B. Manis", email = "pmanis@med.unc.edu"},
]
requires-python = ">=3.13.7"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status ::  Beta",
    "Environment :: Console",
    "Intended Audience :: Neuroscientists",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10+",
    "Topic :: Data Processing :: Neuroscience",
    "Topic :: Scientific Software :: Tools :: Python Modules",
]

dependencies = [
    "colorcet>=3.1.0",
    "colormaps>=0.4.2",
    "cython>=3.0.12",
    "deepdiff>=8.5.0",
    "descartes>=1.1.0",
    "dill>=0.3.8",
    "gitpython>=3.1.44",
    "hdmf>=4.0.0",
    "imageio>=2.37",
    "imreg-dft>=2.0",
    "isodate>=0.6.1",
    "jinja2>=3.1.6",
    "jupyterlab>=4.4.0",
    "lmfit>=1.3.3",
    "matplotlib>=3.10.0",
    "matplotlib-scalebar>=0.8.1",
    "meegkit==0.1.9",
    # "metaarray==2.1.1",  # should use this version, but has a bug
    "metaarray @ git+https://github.com/pbmanis/metaarray.git@nparray-fix#egg=metaarray",  # forked from Martin Chase directly
    "montage",
    "nest-asyncio==1.2.0",
    "networkx>=2.0",
    "ngauge",
    "nose==1.3.7",
    "numba>=0.63.0",
    "numpy>=2.2",
    "nwbinspector>=0.6.3",
    "obspy==1.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pandas-parallel-apply==2.2",
    "paramiko>=2.8.1",
    "pingouin==0.5.4",
    "pint>=0.24.4",
    "pre-commit>=4.2.0",
    "psutil>=6.1.0",
    "pyabf==2.3.8",
    "pyarrow==19.0.0",
    "pynwb==3.1.0",
    "pyopengl>=3.1.5",
    "pyparsing==3.2.3",
    "pypdf>=6.0.0",
    "pyperclip>=1.9.0",
    "pyqt6>=6.9.1",
    "pyqt6-sip>=13.10.2",
    "pyqt6-webengine>=6.9.0",
    "pyqtgraph==0.13.7",
    "pytest>=7.3.1",
    "python-docx==1.1.0",
    "python-statemachine>=2.5.0",
    "pywavelets>=1.6.0",
    "refurb==1.13.0",
    "resampy==0.4.3",
    "ruamel-yaml>=0.15,<1",
    "ruff>=0.12.2",
    "scikit-posthocs==0.9.0",
    "scipy==1.16.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.1",
    "sphinx==8.2.3",
    "sphinx-automodapi>=0.20.0",
    "sphinx-rtd-theme>=3.0.2",
    "statsmodels==0.14.5",
    "sympy>=1.14.0",
    "tables==3.10.2",
    "termcolor>=3.1.0",
    "tifffile==2024.6.18",
    "ty>=0.0.1a14",
    "xlrd>=1.0.0",
    "xlsxwriter>=3.0",
    "pylibrary @ git+https://github.com/pbmanis/pylibrary.git@main#egg=main",
    "pyqt5>=5.15.11",
    "streamlit>=1.50.0",
    "pyautogui>=0.9.54",
    "imagecodecs>=2025.8.2",
    "awkward>=2.8.10",
    "prettyprinter>=0.18.0",
    "numdifftools>=0.9.41",
    "efel>=5.7.20",
    "metaarray",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "flake8>=7.0.0",
    "mypy==1.13.0",
    "ruff>=0.12.2",
    "typer>=0.4.0",
    "isort>=5.13.2"
]

[project.urls]
Homepage = "http://github.com/pbmanis/ephys"

[project.scripts]
analyzemapdata = "ephys.mapanalysistools.analyzeMapData:main"
checkrs = "ephys.tools.check_rs:main"
datasummary = "ephys.tools.data_summary:main"
dircheck = "ephys.tools.dir_check:main"
ma2tiff = "ephys.tools.ma2tiff:convertfiles"
matread = "ephys.ephys_analysis.MatdatacRead:main"
show_assembled = "ephys.tools.show_assembled:main"
make_map_annotations = "ephys.tools.make_xls_map:main"
plotmaps = "ephys.tools.plot_maps:main"
mapevent_analyzer = "ephys.tools.mapevent_analyzer:main"
make_coding_sheet = "ephys.tools.make_coding_sheet:main"

[project.gui-scripts]
bridge = "ephys.tools.bridge:main_gui"
datatable = "ephys.gui.data_tables:main"
fix_objscale = "ephys.tools.fix_objscale:main"
measure = "ephys.tools.cursor_plot:main"
miniviewer = "ephys.tools.miniviewer:main"

[tool.pdm]
distribution = false

[tool.setuptools]
packages = ['ephys', 'ephys.gui', 'ephys.mapanalysistools', 'ephys.tools']
# ext_modules = [
#     {module = "ephys.tools.c_deriv", sources = ["ephys/tools/c_deriv.pyx"]},
# ]   

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"]}

[tool.uv.sources]
montage = { path = "../montage" }
pylibrary = { git = "https://github.com/pbmanis/pylibrary" }
metaarray = { path = "../metaarray", editable = true }

[tool.ruff.format]
indent-style = "space"
line-length = 120


# [tool.ty]
# respect-ignore-files = true

[tool.ty.rules]
unused-ignore-comment = "warn"
possibly-unbound-attribute = "ignore"
# possiby-unbound-import = "error"
invalid-return-type = "error"
invalid-argument-type = "error"
division-by-zero = "error"
redundant-cast = "warn"

[tool.setuptools_scm]
# nothing to do